--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,10 @@
-
 body{
-    background-image: url("../images/pizza-2000595_960_720.jpg");
-    background-position: cover;
+    background-color: brown;
+}
+.header{
+    background-image: url("../images/2bc85a1f-aaae-4c49-8e13-67b7bc49c9e5.jpeg");
     width: 100%;
-    height: 100vh;
+    height: 40vh;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -13,4 +14,13 @@ body{
 }
 h1{
     text-align: center;
+}
+img{
+    height: 200px;
+    width: 400px;
+}
+.piz{
+    margin-top: 100px;
+    background-color: brown;
+    padding: 100px;
 }
