Styled the button add

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,8 +32,6 @@ img{
 .btn{
     margin-top:30px;
 }
-form{
-    margin-top: 30px;
-    color:cadetblue;
-
+section{
+    background-image: url(/images/pizza-3303388_960_720.jpgg);
 }
