Addeded the styling on the footer to so that it pushes the margin downwards. I used margin top to achieve this

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ section{
     background-image: url(/images/pizza-3303388_960_720.jpgg);
 }
 .footer{
+    margin-top: 30px;
     text-align: center;
     background-color: brown;
     padding: 20px;
