--- a/css/styles.css
+++ b/css/styles.css
@@ -56,3 +56,9 @@ section{
 marquee{
     background-color: white;
 }
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+      width: 100%;
+    }
+}
